Implemented kafka producer

--- a/Producer/appsettings.json
+++ b/Producer/appsettings.json
@@ -9,5 +9,8 @@
     "ConnectionStrings": {
         "TodoDatabase": "TodoList"
     },
+    "Kafka": {
+        "BootstrapServers": "localhost:9092"
+    },
     "AllowedHosts": "*"
 }
